--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
             <div class="filters">
                 <sorter></sorter>
                 <div class="wrapper-for-categories">
-                    <categories :category-name="categoryNames[0]" :array-of-sections="authors"></categories>
-                    <categories :category-name="categoryNames[1]" :array-of-sections="yearOfPublishing"></categories>
-                    <categories :category-name="categoryNames[2]" :array-of-sections="publishingHouse"></categories>
+                    <categories v-for="category of categoryNames" :item-category="category"></categories>
                 </div>
 
             </div>
